      - Traversable solar panels (via "Flat Solar Panels - Solar Freakin' Roadway")
    - Logistics
      - Restrict pipe connections and control fluid flow (via "Flow Control")
      - Configure input/output layout for fluid-based crafting (via "Fluid Permutations Fixed")
      - Small tank for storing fluids (via "Extra Storage Tank: Minibuffer")
      - Large tank for storing fluids (via "Large Storage Tank")
      - Specialised pipes for increased long distance fluid flow (via "Fluid Must Flow")
      - Improved construction and logistic robots (via "Hercules Robots")
      - Additional larger variants of chests (via "AAI Containers")
      - Configurable inserter drop-off/pick-up positions (via "Side Inserters")
      - Fluid delivery using logistics network (via "Logistic Tank")
      - Early game robot logistics (via "Kontraptions")
    - Miscellaneous
      - Relocate shipwreck/set spawn point (via "Relocatable Shipwreck")
      - Signposts (via "Kontraptions")
      - Torches (via "Kontraptions")
      - Canal building/water placement (via "Canal Excavator")
      - Mineable platforms for water placement (via "Platforms")
    - Transportation
      - Fast and pretty road tiles (via "Asphalt Roads")
      - Water-based transportation and resource extraction (via "Cargo Ships")
      - Water-placeable rails (via "Beautiful Bridge Railway for Cargoships")
      - Additional, faster car tiers (via "Faster Cars")
      - Aeral travel (via "HelicopterRevival" and "Lex's Aircraft")
      - Miniature trains (via "Mini Trains")
      - Battery-powered electric trains (via Battery-Electric Train)
    - Visuals
      - Realistic nuclear reactor glow (via "Realistic Reactor Glow")
      - Improved heat pipe glow (via "Realistic Heat Glow")
      - Realistic ore textures/colours (via "Realistic Ores")
      - Remove ground decorations from concrete (via "Cleaned Concrete")
      - Varied biomes and improved map generation (via "Alien Biomes")
  Bugfixes: