@@ -23,6 +23,7 @@
         "cargo-ships >= 0.2.7",
         "canal-excavator >= 1.1.7",
         "CleanedConcrete >= 1.0.4",
+        "Clockwork >= 1.1.1",
         "electricboiler >= 1.1.0",
         "extra-storage-tank-minibuffer >= 0.1.4",
         "Faster_Cars >= 0.1.1",
